--- a/src/components/printCheck/PrintCheck.module.scss
+++ b/src/components/printCheck/PrintCheck.module.scss
@@ -1,423 +1,421 @@
 .print__check {
-    width: 100%;
-    height: 1000px;
-    background: #F1EFE1;
-    border-radius: 26px;
-    margin-top: 35px;
+  width: 100%;
+  height: 1000px;
+  background: #f1efe1;
+  border-radius: 26px;
+  margin-top: 35px;
 
-    .print__check__header {
-        display: flex;
-        justify-content: space-around;
-        padding-top: 15px;
+  .print__check__header {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 15px;
 
-        .header__right {
-            display: flex;
-            align-items: center;
-        }
+    .header__right {
+      display: flex;
+      align-items: center;
     }
+  }
 }
 
 .header__left {
-    width: 311.74px;
-    height: 61px;
-    background: #233259;
-    border-radius: 13px;
-    font-weight: 700;
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
+  width: 311.74px;
+  height: 61px;
+  background: #233259;
+  border-radius: 13px;
+  font-weight: 700;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
 }
 
 .code {
-    width: 190.84px;
-    height: 95px;
+  width: 190.84px;
+  height: 95px;
 }
 
 .header__info {
-    font-family: 'Consolas';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 25px;
-    padding-left: 10px;
-    letter-spacing: 1.5px;
+  font-family: 'Consolas';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 25px;
+  padding-left: 10px;
+  letter-spacing: 1.5px;
 }
 
 // check section
 .check__section {
+  width: 100%;
+  height: auto;
+  margin-top: 10px;
+  color: white;
+
+  .check__header {
+    width: 100%;
+    height: 33px;
+    background: #233259;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+
+    .check__left {
+      width: 50%;
+
+      p {
+        display: block;
+        text-align: end;
+        padding-right: 60px;
+      }
+    }
+
+    .check__right {
+      width: 50%;
+
+      ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        margin: 0;
+        padding: 0;
+
+        li {
+          list-style: none;
+        }
+      }
+    }
+  }
+}
+
+.check__main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .check__left {
+    width: 50%;
+    display: flex;
+    padding-top: 12px;
+    justify-content: space-evenly;
+
+    img {
+      width: 200px;
+      height: 105px;
+    }
+
+    div {
+      width: 342.71px;
+      height: 168px;
+      left: 371px;
+      background: #ffffff;
+      border-radius: 13px;
+
+      ul {
+        margin: 0;
+        padding: 0;
+
+        li {
+          list-style: none;
+          color: #828282;
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 12px;
+          text-align: end;
+          border-bottom: 2px dotted #233259;
+          padding: 12px;
+        }
+      }
+    }
+  }
+
+  .check__right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 12px;
+
+    div {
+      height: 100%;
+
+      ul {
+        height: 168px;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+
+        li {
+          width: 80%;
+          list-style: none;
+          margin: 5px 10px;
+          background-color: white;
+          height: 32px;
+          background: #ffffff;
+          border-radius: 8px;
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 900;
+          font-size: 18px;
+          color: #233259;
+          padding-left: 10px;
+        }
+      }
+    }
+
+    .summa {
+      width: 30%;
+    }
+
+    .valyuta {
+      width: 20%;
+
+      li {
+        width: 60%;
+      }
+    }
+  }
+}
+
+.card__section {
+  width: 100%;
+
+  .card__header {
+    width: 100%;
+    height: 33px;
+    background: #233259;
+    margin-top: 15px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .card__left {
+      width: 50%;
+
+      p {
+        text-align: center;
+      }
+    }
+
+    .card__right {
+      width: 50%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+  }
+
+  .card__info {
     width: 100%;
     height: auto;
     margin-top: 10px;
     color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
-    .check__header {
-        width: 100%;
-        height: 33px;
-        background: #233259;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .card__left {
+      width: 50%;
+
+      p {
+        width: 534.55px;
+        height: 32px;
+        background: #ffffff;
+        border-radius: 8px;
+        color: #233259;
+        text-align: center;
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 18px;
+        margin-left: 80px;
+      }
+    }
+
+    .card__right {
+      width: 50%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+      p {
+        width: 534.55px;
+        height: 32px;
+        background: #ffffff;
+        border-radius: 8px;
+        color: #233259;
+        text-align: center;
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 18px;
+        margin-left: 80px;
+        margin-right: 25px;
+      }
+    }
+  }
+}
+
+.user__info__section {
+  width: 97%;
+  margin: 0 auto;
+  display: flex;
+
+  .user__info__left {
+    width: 50%;
+
+    .box {
+      width: 90%;
+      height: 22px;
+      background: #000000;
+      box-shadow: 0px 2px 4px rgba(32, 52, 27, 0.25);
+
+      p {
+        color: white;
         font-family: 'Arial';
         font-style: normal;
         font-weight: 400;
         font-size: 12px;
-
-        .check__left {
-            width: 50%;
-
-            p {
-                display: block;
-                text-align: end;
-                padding-right: 60px;
-            }
-        }
-
-        .check__right {
-            width: 50%;
-
-            ul {
-                width: 100%;
-                display: flex;
-                justify-content: space-around;
-                margin: 0;
-                padding: 0;
-
-                li {
-                    list-style: none;
-                }
-            }
-
-        }
+        padding: 5px 0 0 15px;
+      }
     }
-}
 
-.check__main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    .name {
+      .inp_name {
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        width: 90%;
+        background-color: white;
+        padding: 10px 10px;
+        color: #4f4f4f;
+      }
 
-    .check__left {
-        width: 50%;
+      .inp_passport {
         display: flex;
-        padding-top: 12px;
-        justify-content: space-evenly;
 
-        img {
-            width: 200px;
-            height: 105px;
+        .pass1 {
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 18px;
+          width: 24%;
+          background-color: white;
+          padding: 10px 10px;
+          color: #4f4f4f;
         }
 
-        div {
-            width: 342.71px;
-            height: 168px;
-            left: 371px;
-            background: #FFFFFF;
-            border-radius: 13px;
-
-            ul {
-                margin: 0;
-                padding: 0;
-
-                li {
-                    list-style: none;
-                    color: #828282;
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 12px;
-                    text-align: end;
-                    border-bottom: 2px dotted #233259;
-                    padding: 12px;
-                }
-            }
+        .pass2 {
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 18px;
+          width: 60%;
+          background-color: white;
+          padding: 10px 10px;
+          color: #4f4f4f;
+          margin-left: 3%;
         }
-    }
+      }
 
-    .check__right {
-        width: 50%;
-        height: 100%;
+      .city {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 12px;
 
-        div {
-            height: 100%;
-
-            ul {
-                height: 168px;
-                padding: 0;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
-                justify-content: end;
-
-                li {
-                    width: 80%;
-                    list-style: none;
-                    margin: 5px 10px;
-                    background-color: white;
-                    height: 32px;
-                    background: #FFFFFF;
-                    border-radius: 8px;
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 900;
-                    font-size: 18px;
-                    color: #233259;
-                    padding-left: 10px;
-                }
-            }
+        .city1 {
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 18px;
+          width: 40%;
+          background-color: white;
+          padding: 10px 10px;
+          color: #4f4f4f;
         }
 
-        .summa {
-            width: 30%;
+        .city2 {
+          font-family: 'Arial';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 18px;
+          width: 40%;
+          background-color: white;
+          padding: 10px 10px;
+          color: #4f4f4f;
+          margin-left: 7%;
         }
-
-        .valyuta {
-            width: 20%;
-
-            li {
-                width: 60%;
-            }
-        }
+      }
     }
-}
+  }
 
-.card__section {
-    width: 100%;
+  .user__info__right {
+    width: 50%;
 
-    .card__header {
-        width: 100%;
-        height: 33px;
-        background: #233259;
-        margin-top: 15px;
+    .box {
+      width: 90%;
+      height: 22px;
+      background: #000000;
+      box-shadow: 0px 2px 4px rgba(32, 52, 27, 0.25);
+
+      p {
         color: white;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-
-        .card__left {
-            width: 50%;
-
-            p {
-                text-align: center;
-            }
-        }
-
-        .card__right {
-            width: 50%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
+        font-family: 'Arial';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        padding: 5px 0 0 15px;
+      }
     }
 
-    .card__info {
-        width: 100%;
-        height: auto;
-        margin-top: 10px;
-        color: white;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+    .box1 {
+      width: 90%;
+      height: 454px;
+      background: #ffffff;
+      border-radius: 13px;
+      margin-top: 20px;
+      padding-left: 15px;
+      box-sizing: border-box;
 
-        .card__left {
-            width: 50%;
+      ul {
+        padding-left: 20px;
 
-            p {
-                width: 534.55px;
-                height: 32px;
-                background: #FFFFFF;
-                border-radius: 8px;
-                color: #233259;
-                text-align: center;
-                font-family: 'Arial';
-                font-style: normal;
-                font-weight: 900;
-                font-size: 18px;
-                margin-left: 80px;
-            }
+        li {
+          font-family: 'Arial';
+          font-weight: 400;
+          font-size: 14px;
+          color: rgba(0, 0, 0, 0.76);
+          padding-top: 10px;
         }
-
-        .card__right {
-            width: 50%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-
-            p {
-                width: 534.55px;
-                height: 32px;
-                background: #FFFFFF;
-                border-radius: 8px;
-                color: #233259;
-                text-align: center;
-                font-family: 'Arial';
-                font-style: normal;
-                font-weight: 900;
-                font-size: 18px;
-                margin-left: 80px;
-                margin-right: 25px;
-            }
-        }
+      }
     }
-}
-
-.user__info__section {
-    width: 97%;
-    margin: 0 auto;
-    display: flex;
-
-    .user__info__left {
-        width: 50%;
-
-        .box {
-            width: 90%;
-            height: 22px;
-            background: #000000;
-            box-shadow: 0px 2px 4px rgba(32, 52, 27, 0.25);
-
-            p {
-                color: white;
-                font-family: 'Arial';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 12px;
-                padding: 5px 0 0 15px;
-            }
-        }
-
-
-        .name {
-            .inp_name {
-                font-family: 'Arial';
-                font-style: normal;
-                font-weight: 700;
-                font-size: 18px;
-                width: 90%;
-                background-color: white;
-                padding: 10px 10px;
-                color: #4F4F4F;
-            }
-
-            .inp_passport {
-                display: flex;
-
-                .pass1 {
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 18px;
-                    width: 24%;
-                    background-color: white;
-                    padding: 10px 10px;
-                    color: #4F4F4F;
-                }
-
-                .pass2 {
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 18px;
-                    width: 60%;
-                    background-color: white;
-                    padding: 10px 10px;
-                    color: #4F4F4F;
-                    margin-left: 3%;
-                }
-            }
-
-            .city {
-                display: flex;
-
-                .city1 {
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 18px;
-                    width: 40%;
-                    background-color: white;
-                    padding: 10px 10px;
-                    color: #4F4F4F;
-                }
-
-                .city2 {
-                    font-family: 'Arial';
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 18px;
-                    width: 40%;
-                    background-color: white;
-                    padding: 10px 10px;
-                    color: #4F4F4F;
-                    margin-left: 7%;
-                }
-            }
-        }
-    }
-
-    .user__info__right {
-        width: 50%;
-
-        .box {
-            width: 90%;
-            height: 22px;
-            background: #000000;
-            box-shadow: 0px 2px 4px rgba(32, 52, 27, 0.25);
-
-            p {
-                color: white;
-                font-family: 'Arial';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 12px;
-                padding: 5px 0 0 15px;
-            }
-        }
-
-        .box1 {
-            width: 90%;
-            height: 454px;
-            background: #FFFFFF;
-            border-radius: 13px;
-            margin-top: 20px;
-            padding-left: 15px;
-            box-sizing: border-box;
-
-            ul {
-                padding-left: 20px;
-
-                li {
-                    font-family: 'Arial';
-                    font-weight: 400;
-                    font-size: 14px;
-                    color: rgba(0, 0, 0, 0.76);
-                    padding-top: 10px;
-                }
-            }
-        }
-    }
+  }
 }
 
 .text_muted {
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: #4F4F4F;
-    padding: 10px 10px 5px 15px;
+  font-family: 'Arial';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: #4f4f4f;
+  padding: 10px 10px 5px 15px;
 }
 
 .text_muted2 {
-    font-family: 'Nunito';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    color: rgba(130, 130, 130, 0.8);
-    padding: 5px 10px 5px 15px;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  color: rgba(130, 130, 130, 0.8);
+  padding: 5px 10px 5px 15px;
 }
