--- a/src/components/ScanCheck/scanCheck.module.scss
+++ b/src/components/ScanCheck/scanCheck.module.scss
@@ -2,3 +2,33 @@
   background-color: #fff;
   border-radius: 20px;
 }
+
+.qr__wrap {
+  background: #FFFFFF;
+  box-shadow: 0px 0px 27px rgba(0, 0, 0, 0.1);
+  border-radius: 40px;
+  //width: 50%;
+  text-align: center;
+  padding: 25px 45px;
+  .decorate {
+    border: 2px solid black;
+    border-radius: 18px;
+    height: 9px;
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
+}
+
+.img {
+  max-width: 264px;
+}
+
+.secondary_text {
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #CEB09F;
+  padding-bottom: 14px;
+}
