--- a/src/components/UserBadge/UserBadge.module.scss
+++ b/src/components/UserBadge/UserBadge.module.scss
@@ -35,7 +35,7 @@
         .progress {
           background-color: #067911;
           height: 6px;
-          width: 25%;
+          //width: 25%;
         }
       }
     }
@@ -60,8 +60,30 @@
           margin-bottom: 16px;
           background-color: #fff;
         }
-        .active { 
-          
+        .round-active {
+          border-radius: 50%;
+          height: 34px;
+          width: 34px;
+          border: 1px solid #067911;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: 800;
+          margin-bottom: 16px;
+          background-color: #fff;
+        }
+        .round-done { 
+          border-radius: 50%;
+          height: 34px;
+          width: 34px;
+          border: 1px solid #067911;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-weight: 800;
+          margin-bottom: 16px;
+          background-color: #067911;
+          color: #fff;
         }
         // .round-label {
         //   position: relative;
