--- a/src/components/ScanCheck/scanCheck.module.scss
+++ b/src/components/ScanCheck/scanCheck.module.scss
@@ -10,6 +10,9 @@
   //width: 50%;
   text-align: center;
   padding: 25px 45px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
   .decorate {
     border: 2px solid black;
     border-radius: 18px;
